--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h5>sign in with Google</h5>
       </div>
 
-      <h4>Already have an account? Log In</h4>
+      <h4>Already have an account? <a href="login.html">Log In</a></h4>
     </main>
 
     <script type="module" src="index.js"></script>
