--- a/homepage.html
+++ b/homepage.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bill-Sharing!</title>
+    <title>Bill-Share!</title>
     <link rel="icon" href="images/money.png" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+  </body>
 </html>
